--- a/pages/18360.html
+++ b/pages/18360.html
@@ -312,18 +312,24 @@ margin-left: 0em;
 <li><a href='https://en.wikipedia.org/wiki/Archimedes'>Wikiedpia entry</a></li>
 </ul>
 
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_9a4697dca0d9cb8b1b0adf46679c8d46d98a7d53_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/pi'>pi</a></li>
+</ul>
+
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Created on June 12, 2017 10:21:32 
+  Revised on November 26, 2017 08:47:21 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  (94.220.82.107)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Archimedes" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Archimedes" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Archimedes/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Archimedes" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Archimedes" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
