--- a/pages/18797.html
+++ b/pages/18797.html
@@ -312,23 +312,21 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definitions'>Definitions</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#relation_to_other_functions'>Relation to other functions</a></li><li><a href='#roots'>Roots</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The sine function <math class='maruku-mathml' display='inline' id='mathml_3a71fec30a1a392b6165c37a6649d0e953550f10_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>sin</mi></mrow><annotation encoding='application/x-tex'>\sin</annotation></semantics></math> is one of the basic functions in <a class='existingWikiWord' href='/nlab/show/trigonometry'>trigonometry</a>. It may be thought of as assigning to any <a class='existingWikiWord' href='/nlab/show/angle'>angle</a> the <a class='existingWikiWord' href='/nlab/show/metric+space'>distance</a> to a chosen axis of the point on the <a class='existingWikiWord' href='/nlab/show/unit+sphere'>unit circle</a> with that angle to that axis.</p>
+<p>The sine function <math class='maruku-mathml' display='inline' id='mathml_daf0e84862d46186ddf7fed34cdcb6aeae577a9f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>sin</mi></mrow><annotation encoding='application/x-tex'>\sin</annotation></semantics></math> is one of the basic functions in <a class='existingWikiWord' href='/nlab/show/trigonometry'>trigonometry</a>. It may be thought of as assigning to any <a class='existingWikiWord' href='/nlab/show/angle'>angle</a> the <a class='existingWikiWord' href='/nlab/show/metric+space'>distance</a> to a chosen axis of the point on the <a class='existingWikiWord' href='/nlab/show/unit+sphere'>unit circle</a> with that angle to that axis.</p>
 
 <h2 id='definitions'>Definitions</h2>
 
-<p>The <em>sine function</em> is the <a class='existingWikiWord' href='/nlab/show/function'>function</a> <math class='maruku-mathml' display='inline' id='mathml_3a71fec30a1a392b6165c37a6649d0e953550f10_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>sin</mi><mo lspace='verythinmathspace'>:</mo><mi>ℝ</mi><mo>→</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\sin \colon \mathbb{R} \to \mathbb{R}</annotation></semantics></math> from the <a class='existingWikiWord' href='/nlab/show/real+number'>real numbers</a> to themselves characterized by the following equivalent conditions</p>
+<p>The <em>sine function</em> is the <a class='existingWikiWord' href='/nlab/show/function'>function</a> <math class='maruku-mathml' display='inline' id='mathml_daf0e84862d46186ddf7fed34cdcb6aeae577a9f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>sin</mi><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mi>ℝ</mi><mo>→</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\sin \;\colon\; \mathbb{R} \to \mathbb{R}</annotation></semantics></math> from the <a class='existingWikiWord' href='/nlab/show/real+number'>real numbers</a> to themselves which is characterized by the following equivalent conditions:</p>
 
 <ol>
 <li>
-<p><math class='maruku-mathml' display='inline' id='mathml_3a71fec30a1a392b6165c37a6649d0e953550f10_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>sin</mi></mrow><annotation encoding='application/x-tex'>\sin</annotation></semantics></math> is the unique <a class='existingWikiWord' href='/nlab/show/solution'>solution</a> among <a class='existingWikiWord' href='/nlab/show/smooth+map'>smooth functions</a> to the <a class='existingWikiWord' href='/nlab/show/differential+equation'>differential equation</a>/<a class='existingWikiWord' href='/nlab/show/initial+value+problem'>initial value problem</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_3a71fec30a1a392b6165c37a6649d0e953550f10_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><mi>sin</mi><mo>″</mo></mtd> <mtd><mo>=</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>sin</mi></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'> 
-  \begin{aligned}
-    sin&#39;&#39; &amp; = -sin 
-  \end{aligned}
+<p><math class='maruku-mathml' display='inline' id='mathml_daf0e84862d46186ddf7fed34cdcb6aeae577a9f_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>sin</mi></mrow><annotation encoding='application/x-tex'>\sin</annotation></semantics></math> is the unique <a class='existingWikiWord' href='/nlab/show/solution'>solution</a> among <a class='existingWikiWord' href='/nlab/show/smooth+map'>smooth functions</a> to the <a class='existingWikiWord' href='/nlab/show/differential+equation'>differential equation</a>/<a class='existingWikiWord' href='/nlab/show/initial+value+problem'>initial value problem</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_daf0e84862d46186ddf7fed34cdcb6aeae577a9f_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>sin</mi><mo>″</mo><mo>=</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>sin</mi></mrow><annotation encoding='application/x-tex'> 
+  sin&#39;&#39; = -sin 
 
 </annotation></semantics></math></div>
 <p>(where a prime indicates the <a class='existingWikiWord' href='/nlab/show/derivative'>derivative</a>) subject to the initial conditions</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_3a71fec30a1a392b6165c37a6649d0e953550f10_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><mi>sin</mi><mo stretchy='false'>(</mo><mn>0</mn><mo stretchy='false'>)</mo></mtd> <mtd><mo>=</mo><mn>0</mn></mtd></mtr> <mtr><mtd><mi>sin</mi><mo>′</mo><mo stretchy='false'>(</mo><mn>0</mn><mo stretchy='false'>)</mo></mtd> <mtd><mo>=</mo><mn>1</mn><mspace width='thinmathspace'></mspace><mo>.</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'> 
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_daf0e84862d46186ddf7fed34cdcb6aeae577a9f_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><mi>sin</mi><mo stretchy='false'>(</mo><mn>0</mn><mo stretchy='false'>)</mo></mtd> <mtd><mo>=</mo><mn>0</mn></mtd></mtr> <mtr><mtd><mi>sin</mi><mo>′</mo><mo stretchy='false'>(</mo><mn>0</mn><mo stretchy='false'>)</mo></mtd> <mtd><mo>=</mo><mn>1</mn><mspace width='thinmathspace'></mspace><mo>.</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'> 
   \begin{aligned}
     sin(0) &amp;= 0
     \\
@@ -339,35 +337,39 @@ margin-left: 0em;
 </annotation></semantics></math></div></li>
 
 <li>
-<p>(<a class='existingWikiWord' href='/nlab/show/Euler%27s+formula'>Euler&#39;s formula</a>) <math class='maruku-mathml' display='inline' id='mathml_3a71fec30a1a392b6165c37a6649d0e953550f10_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>sin</mi></mrow><annotation encoding='application/x-tex'>\sin</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/real+part'>imaginary part</a> of the <a class='existingWikiWord' href='/nlab/show/exponential+map'>exponential function</a> with imaginary argument</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_3a71fec30a1a392b6165c37a6649d0e953550f10_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>sin</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mo>=</mo><mi>exp</mi><mo stretchy='false'>(</mo><mi>i</mi><mi>x</mi><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
-  \sin(x) = \exp(i x)
+<p>(<a class='existingWikiWord' href='/nlab/show/Euler%27s+formula'>Euler&#39;s formula</a>) <math class='maruku-mathml' display='inline' id='mathml_daf0e84862d46186ddf7fed34cdcb6aeae577a9f_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>sin</mi></mrow><annotation encoding='application/x-tex'>\sin</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/real+part'>imaginary part</a> of the <a class='existingWikiWord' href='/nlab/show/exponential+map'>exponential function</a> with imaginary argument</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_daf0e84862d46186ddf7fed34cdcb6aeae577a9f_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><mi>sin</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo></mtd> <mtd><mo>=</mo><mi>Im</mi><mrow><mo>(</mo><mi>exp</mi><mo stretchy='false'>(</mo><mi>i</mi><mi>x</mi><mo stretchy='false'>)</mo><mo>)</mo></mrow></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mfrac><mn>1</mn><mrow><mn>2</mn><mi>i</mi></mrow></mfrac><mrow><mo>(</mo><mi>exp</mi><mo stretchy='false'>(</mo><mi>i</mi><mi>x</mi><mo stretchy='false'>)</mo><mo>−</mo><mi>exp</mi><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>i</mi><mi>x</mi><mo stretchy='false'>)</mo><mo>)</mo></mrow></mtd></mtr></mtable></mrow><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+  \begin{aligned}
+    \sin(x) &amp; = Im\left( \exp(i x) \right)
+    \\
+    &amp; = \frac{1}{2 i}\left( \exp(i x) - \exp(- i x)\right)
+  \end{aligned}
   \,.
 
 </annotation></semantics></math></div></li>
 
 <li>
-<p><math class='maruku-mathml' display='inline' id='mathml_3a71fec30a1a392b6165c37a6649d0e953550f10_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>sin</mi></mrow><annotation encoding='application/x-tex'>\sin</annotation></semantics></math> is the unique function which</p>
+<p><math class='maruku-mathml' display='inline' id='mathml_daf0e84862d46186ddf7fed34cdcb6aeae577a9f_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>sin</mi></mrow><annotation encoding='application/x-tex'>\sin</annotation></semantics></math> is the unique function which</p>
 
 <ol>
 <li>
-<p>is <a class='existingWikiWord' href='/nlab/show/continuous+map'>continuous</a> at <math class='maruku-mathml' display='inline' id='mathml_3a71fec30a1a392b6165c37a6649d0e953550f10_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn></mrow><annotation encoding='application/x-tex'>0</annotation></semantics></math></p>
+<p>is <a class='existingWikiWord' href='/nlab/show/continuous+map'>continuous</a> at <math class='maruku-mathml' display='inline' id='mathml_daf0e84862d46186ddf7fed34cdcb6aeae577a9f_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn></mrow><annotation encoding='application/x-tex'>0</annotation></semantics></math></p>
 </li>
 
 <li>
-<p>satisfies the <a class='existingWikiWord' href='/nlab/show/equation'>equations</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_3a71fec30a1a392b6165c37a6649d0e953550f10_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>1</mn><mo>−</mo><msup><mi>x</mi> <mn>2</mn></msup><mo>≤</mo><mfrac><mrow><mi>sin</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow><mi>x</mi></mfrac><mo>≤</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'> 
-  1 - x^2 \leq \frac{sin(x)}{x} \leq 1 
+<p>satisfies the <a class='existingWikiWord' href='/nlab/show/inequality+relation'>inequality</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_daf0e84862d46186ddf7fed34cdcb6aeae577a9f_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>1</mn><mo>−</mo><msup><mi>x</mi> <mn>2</mn></msup><mspace width='thickmathspace'></mspace><mo>≤</mo><mspace width='thickmathspace'></mspace><mfrac><mrow><mi>sin</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow><mi>x</mi></mfrac><mspace width='thickmathspace'></mspace><mo>≤</mo><mspace width='thickmathspace'></mspace><mn>1</mn></mrow><annotation encoding='application/x-tex'> 
+  1 - x^2 \;\leq\; \frac{\sin(x)}{x} \;\leq\; 1 
 
 </annotation></semantics></math></div>
-<p>and</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_3a71fec30a1a392b6165c37a6649d0e953550f10_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>sin</mi><mo stretchy='false'>(</mo><mn>3</mn><mi>x</mi><mo stretchy='false'>)</mo><mo>=</mo><mn>3</mn><mi>sin</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mo>−</mo><mn>4</mn><mo stretchy='false'>(</mo><mi>sin</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><msup><mo stretchy='false'>)</mo> <mn>3</mn></msup></mrow><annotation encoding='application/x-tex'> 
-  sin(3 x) = 3 sin(x) - 4 (sin(x))^3 
+<p>and the <a class='existingWikiWord' href='/nlab/show/equation'>equation</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_daf0e84862d46186ddf7fed34cdcb6aeae577a9f_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>sin</mi><mo stretchy='false'>(</mo><mn>3</mn><mi>x</mi><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mn>3</mn><mi>sin</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mo>−</mo><mn>4</mn><mo stretchy='false'>(</mo><mi>sin</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><msup><mo stretchy='false'>)</mo> <mn>3</mn></msup></mrow><annotation encoding='application/x-tex'> 
+  \sin(3 x) \;=\; 3 \sin(x) - 4 (\sin(x))^3 
 
 </annotation></semantics></math></div></li>
 </ol>
 
-<p>(see <a href='#Trimble'>trimble</a>, <em><a class='existingWikiWord' href='/toddtrimble/published/Characterization+of+sine' title='toddtrimble'>Characterization of sine</a></em>)</p>
+<p>(see <a href='#Trimble'>Trimble</a>: <em><a class='existingWikiWord' href='/toddtrimble/published/Characterization+of+sine' title='toddtrimble'>Characterization of sine</a></em>)</p>
 </li>
 </ol>
 
@@ -379,7 +381,7 @@ margin-left: 0em;
 
 <h3 id='roots'>Roots</h3>
 
-<p>The <a class='existingWikiWord' href='/nlab/show/root'>roots</a> of the sine function, hence the argument where its value is <a class='existingWikiWord' href='/nlab/show/zero'>zero</a>, are the <a class='existingWikiWord' href='/nlab/show/integer'>integer</a> multiples of <a class='existingWikiWord' href='/nlab/show/pi'>pi</a> <math class='maruku-mathml' display='inline' id='mathml_3a71fec30a1a392b6165c37a6649d0e953550f10_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>π</mi><mo>∈</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\pi \in \mathbb{R}</annotation></semantics></math>.</p>
+<p>The <a class='existingWikiWord' href='/nlab/show/root'>roots</a> of the sine function, hence the argument where its value is <a class='existingWikiWord' href='/nlab/show/zero'>zero</a>, are the <a class='existingWikiWord' href='/nlab/show/integer'>integer</a> multiples of <a class='existingWikiWord' href='/nlab/show/pi'>pi</a> <math class='maruku-mathml' display='inline' id='mathml_daf0e84862d46186ddf7fed34cdcb6aeae577a9f_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>π</mi><mo>∈</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\pi \in \mathbb{R}</annotation></semantics></math>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -402,6 +404,10 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/trigonometric+identity'>trigonometric identity</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/pi'>pi</a></p>
 </li>
 </ul>
 
@@ -426,14 +432,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 26, 2017 08:53:04 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.82.107)
+  Revised on November 26, 2017 09:15:44 
+  by <a class="existingWikiWord" href="/nlab/show/Todd+Trimble">Todd Trimble</a>
+  (69.112.103.83)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/sine" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/sine/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/sine" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/sine" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/sine" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/sine/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/sine" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/sine" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
